# dud

./: .gitignore  DESIGN.md  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: flake-hunt.yml  publish.yml  test.yml
dev/: fc-test.sh  lima-fc.yaml
dud/: __init__.py  diffscan.py  errors.py  kernels.py  proto.py  results.py  values.py
dud/backends/: base.py  firecracker.py  pool.py  subprocess.py  vfkit.py
dud/guest/: init.py  runner.py  shell.py  staging.py  supervisor.py  template.py  ui.py
dud/images/: __init__.py  builder.py  cpio.py  debs.py  registry.py  rootfs.py  scratch.py  wheels.py
tests/: conftest.py  test_api.py  test_diffscan.py  test_proto.py  test_ui.py  test_values.py
tests/backends/: test_base_unit.py  test_firecracker_unit.py  test_pool.py  test_vfkit_unit.py
tests/conformance/: test_freeze.py  test_lifecycle.py  test_python.py  test_scratch.py  test_services.py  test_shell.py  test_tree_diff.py  test_view_worker.py
tests/guest/: test_harvest.py  test_replay.py  test_supervisor_worker.py  test_template.py
tests/images/: conftest.py  test_build.py  test_cpio.py  test_debs.py  test_integration.py  test_kernels.py  test_registry.py  test_rootfs.py  test_scratch.py  test_wheels.py
