[project]
name = "dud"
version = "0.0.1"
description = "A dumb firecracker: real, disposable machines for versioned agent workspaces"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dud"]

[tool.pytest.ini_options]
testpaths = ["tests"]
